styles: black bg as default to prevent white flash

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,4 +5,5 @@ SPDX-License-Identifier: Apache-2.0 */
 body {
     overscroll-behavior: none;
     scroll-behavior: smooth;
+    background-color: #111112;
 }
